--- a/Binary to Decimal/src/App.css
+++ b/Binary to Decimal/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body{
   text-align: center;
+  font-size: 4rem;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+h1{
+  color: white;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+#container{
+  font-size: 2rem;
+  text-align: center;
+  background-color: gray;
+  border: none;
+  border-radius: 25px;
+  width: 90%;
+  height: 90%;
+  margin-left: 50px;
+  box-shadow: 5px 5px 10px 2px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input{
+  font-size: 2rem;
+  border-radius: 10px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+    font-size: 2.5rem;
+    background-color: hsl(180, 100%, 50%);
+    border: none;
+    border-radius: 10px;
+    margin-right: 5px;
+    cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+p{
+  font-size: 4rem;
 }
